--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a hfer="recipes/burrito.html">Burrito</a>
+        <ul>
+            <li><a href="recipes/burrito.html" rel="noreferrer">Burrito</a></li>
+            <li><a href="recipes/cereal.html" rel="noreferrer">Cereal</a></li>
+            <li><a href="recipes/smoothie.html" rel="noreferrer">Smoothie</a></li>
+        </ul>
     </body>
 </html>
