Use CSS to change styling for practice
Mianly add center alignment and modern fonts.

--- a/recipes/smoothie.html
+++ b/recipes/smoothie.html
@@ -3,15 +3,16 @@
     <head>
         <meta charset="utf-8">
         <title>Smoothie Recipe</title>
+        <link href="../style.css" rel="stylesheet">
     </head>
 
-    <body>
-        <a href="../index.html" rel="noreferrer">Home</a>
+    <body class="recipe">
+        <a class="home-link" href="../index.html" rel="noreferrer">Home</a>
         <h1>Strawberry Banana Smoothie</h1>
-        <img src="https://media.istockphoto.com/id/576740204/photo/strawberry-smoothie.jpg?s=612x612&w=0&k=20&c=eqIe1_itBOqQmtV_KtPduPENbAZWsuM5Q9-qmLp0MAE=" alt="Image of smoothie">
+        <img class="image" src="https://media.istockphoto.com/id/576740204/photo/strawberry-smoothie.jpg?s=612x612&w=0&k=20&c=eqIe1_itBOqQmtV_KtPduPENbAZWsuM5Q9-qmLp0MAE=" alt="Image of smoothie">
         
-        <h3>Description</h3>
-        <p>A strawberry banana smoothie is a refreshing and creamy blended drink made with fresh or frozen strawberries, ripe bananas, and a liquid base such as milk, yogurt, or juice. Known for its naturally sweet and fruity flavor, this smoothie is a popular choice for a quick breakfast, post-workout snack, or healthy treat. It is often enriched with ingredients like honey, protein powder, chia seeds, or spinach for added nutrition. The combination of strawberries and bananas provides a balance of sweetness and tartness, along with essential vitamins, fiber, and antioxidants. Easy to make and highly customizable, a strawberry banana smoothie is a delicious and nutritious way to stay energized throughout the day.</p>
+        <h3 class="Description">Description</h3>
+        <p class="text">A strawberry banana smoothie is a refreshing and creamy blended drink made with fresh or frozen strawberries, ripe bananas, and a liquid base such as milk, yogurt, or juice. Known for its naturally sweet and fruity flavor, this smoothie is a popular choice for a quick breakfast, post-workout snack, or healthy treat. It is often enriched with ingredients like honey, protein powder, chia seeds, or spinach for added nutrition. The combination of strawberries and bananas provides a balance of sweetness and tartness, along with essential vitamins, fiber, and antioxidants. Easy to make and highly customizable, a strawberry banana smoothie is a delicious and nutritious way to stay energized throughout the day.</p>
 
         <h3>Ingredients</h3>
         <ul>
