--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
     <head>
         <meta charset="utf-8">
         <title>Recipes</title>
+        <link href="style.css" rel="stylesheet">
     </head>
 
-    <body>
+    <body class="index">
         <h1>Odin Recipes</h1>
         <ul>
-            <li><a href="recipes/burrito.html" rel="noreferrer">Burrito</a></li>
-            <li><a href="recipes/cereal.html" rel="noreferrer">Cereal</a></li>
-            <li><a href="recipes/smoothie.html" rel="noreferrer">Smoothie</a></li>
+            <li><a class="recipe-link" href="recipes/burrito.html" rel="noreferrer">Burrito</a></li>
+            <li><a class="recipe-link" href="recipes/cereal.html" rel="noreferrer">Cereal</a></li>
+            <li><a class="recipe-link" href="recipes/smoothie.html" rel="noreferrer">Smoothie</a></li>
         </ul>
     </body>
 </html>
