--- a/recipes/burrito.html
+++ b/recipes/burrito.html
@@ -3,16 +3,17 @@
     <head>
         <meta charset="utf-8">
         <title>Burrito Recipe</title>
+        <link href="../style.css" rel="stylesheet">
     </head>
 
-    <body>
-        <a href="../index.html">Home</a>
+    <body class="recipe">
+        <a class="home-link" href="../index.html">Home</a>
 
         <h1>Burrito</h1>
-        <img src="https://www.allrecipes.com/thmb/TWBIginDmoe5JMGVpf9mbBk2DiM=/750x0/filters:no_upscale():max_bytes(150000):strip_icc()/8538304_Chicken-Fajita-Burrito_thedailygourmet_4x3-d381424d6949448596ef3dc66ce5712b.jpg" alt="Image of a burrito." width="400">
+        <img class="image" src="https://www.allrecipes.com/thmb/TWBIginDmoe5JMGVpf9mbBk2DiM=/750x0/filters:no_upscale():max_bytes(150000):strip_icc()/8538304_Chicken-Fajita-Burrito_thedailygourmet_4x3-d381424d6949448596ef3dc66ce5712b.jpg" alt="Image of a burrito." width="400">
         
-        <h3>Description</h3>
-        <p>A burrito is a Mexican dish consisting of a flour tortilla wrapped around a savory filling, typically including ingredients like rice, beans, meat (such as beef, chicken, or pork), cheese, and various toppings like salsa, sour cream, and guacamole. The tortilla is usually folded to fully enclose the filling, making it easy to eat by hand. Burritos can be customized with a variety of flavors and ingredients, making them a popular and versatile meal.</p>
+        <h3 class="Description">Description</h3>
+        <p class="text">A burrito is a Mexican dish consisting of a flour tortilla wrapped around a savory filling, typically including ingredients like rice, beans, meat (such as beef, chicken, or pork), cheese, and various toppings like salsa, sour cream, and guacamole. The tortilla is usually folded to fully enclose the filling, making it easy to eat by hand. Burritos can be customized with a variety of flavors and ingredients, making them a popular and versatile meal.</p>
         
         <h3>Ingredients</h3>
         <ul>
