--- a/recipes/cereal.html
+++ b/recipes/cereal.html
@@ -3,15 +3,16 @@
     <head>
         <meta charset="utf-8">
         <title>Cereal Recipe</title>
+        <link href="../style.css" rel="stylesheet">
     </head>
 
-    <body>
-        <a href="../index.html" rel="noreferrer">Home</a>
+    <body class="recipe">
+        <a class="home-link" href="../index.html" rel="noreferrer">Home</a>
         <h1>Cereal</h1>
-        <img src="https://t4.ftcdn.net/jpg/00/60/08/87/360_F_60088763_3CVRHjk4Mn75y6kraCsSqNKEZkuf9032.jpg" alt="Image of cereal">
+        <img class="image" src="https://t4.ftcdn.net/jpg/00/60/08/87/360_F_60088763_3CVRHjk4Mn75y6kraCsSqNKEZkuf9032.jpg" alt="Image of cereal">
 
-        <h3>Description</h3>
-        <p>Cereal is a popular breakfast food made from processed grains such as wheat, corn, rice, or oats. It is often eaten with milk or yogurt and can be served hot or cold. Cereals come in a variety of forms, including flakes, puffs, granola, and shredded pieces, and they may be sweetened or unsweetened. Many cereals are fortified with vitamins and minerals to provide additional nutrition. Some common types include oatmeal, cornflakes, and muesli. While often associated with breakfast, cereal can also be enjoyed as a snack or ingredient in recipes like cereal bars and desserts.</p>
+        <h3 class="Description">Description</h3>
+        <p class="text">Cereal is a popular breakfast food made from processed grains such as wheat, corn, rice, or oats. It is often eaten with milk or yogurt and can be served hot or cold. Cereals come in a variety of forms, including flakes, puffs, granola, and shredded pieces, and they may be sweetened or unsweetened. Many cereals are fortified with vitamins and minerals to provide additional nutrition. Some common types include oatmeal, cornflakes, and muesli. While often associated with breakfast, cereal can also be enjoyed as a snack or ingredient in recipes like cereal bars and desserts.</p>
         
         <h3>Ingredients</h3>
         <ul>
